--- a/aviation-page/aviation.css
+++ b/aviation-page/aviation.css
@@ -86,6 +86,7 @@ h1 {
     color: white;
     padding-left: 20%;
     padding-right: 20%;
+    text-align: center;
 }
 
 p {
@@ -94,7 +95,7 @@ p {
 }
 
 h2 {
-    text-align: left;
+    text-align: center;
     font-size: 35px;
     color: white;
     font-family: sans-serif;
